[package]
name = "listpack"
authors = ["Mikhail<mikhail.f.zhuravlev@gmail.com>"]
description = "Listpack implementatin"
version = "0.2.0"
license = "MIT"
repository = "https://github.com/MiCkEyZzZ/listpack"
edition = "2021"
publish = false

[lib]
name = "listpack"
path = "src/lib.rs"

[dependencies]
criterion = "0.6.0"
smallvec = "1.15.0"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async"] }

[profile.bench]
opt-level = 3

[[bench]]
name = "listpack_benchmarks"
harness = false
