[package]
name = "listpack"
version = "1.1.1"
authors = ["Mikhail<mikhail.f.zhuravlev@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A compact, memory-efficient serialization format for lists of byte strings using varint-encoded lengths"
repository = "https://github.com/MiCkEyZzZ/listpack"
homepage = "https://github.com/MiCkEyZzZ/listpack#readme"
readme = "README.md"
categories = ["data-serialization", "data-structures"]
publish = false

[lib]
name = "listpack"
path = "src/lib.rs"

[dependencies]
criterion = "0.6.0"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async"] }

[profile.bench]
opt-level = 3

[[bench]]
name = "listpack_benchmarks"
harness = false
