[package]
name = "listpack"
version = "1.4.0"
authors = ["Mikhail <mikhail.f.zhuravlev@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Компактный формат сериализации списков байтовых строк с varint-кодированием длин"
repository = "https://github.com/MiCkEyZzZ/listpack"
homepage = "https://github.com/MiCkEyZzZ/listpack#readme"
readme = "README.md"
categories = ["data-serialization", "data-structures"]
keywords = ["serialization", "list", "compact", "varint", "no-std"]
publish = false

[lib]
name = "listpack"
path = "src/lib.rs"

[dependencies]
criterion = "0.6.0"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async"] }

[profile.bench]
opt-level = 3

[[bench]]
name = "listpack_benchmarks"
harness = false
